# velocity_manager

./: Dockerfile  LICENSE.md  README.md
.github/workflows/: build-docker-image.yaml
examples/panther_robot/: docker-compose.yaml
velocity_manager/: CMakeLists.txt  package.xml
velocity_manager/include/: StateMachine.hpp  VelocityManager.hpp
velocity_manager/src/: VelocityManager.cxx  velocity_manager_node.cxx
velocity_manager/test/: CMakeLists.txt  VelocityManagerTest.cxx
